<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WorkoutBrist1.2</string>
    <string-array name="lv_menu">
        <item>腓腹筋伸ばし</item>
        <item>つま先立ち</item>
        <item>(立)脚裏伸ばし</item>
        <item>膝裏ボール(タオル)潰し</item>
        <item>足指じゃんけん</item>
        <item>足首屈伸</item>
        <item>(寝)脚裏伸ばし</item>
        <item>膝抱え</item>
        <item>足上げ腹筋</item>
        <item>レッグライズ</item>
        <item>ヒップリフト</item>
        <item>股関節　内転・外転</item>
        <item>バードドック</item>
        <item>ヒップアブダクション(Belt)</item>
        <item>ヒップアダクション(Ball)</item>
        <item>スケボー脚屈伸</item>
        <item>足上げ</item>
        <item>チェアスクワット</item>
        <item>フロントランジ</item>
        <item>鎌田式テーブルスクワット</item>
        <item>鎌田式ワイドスクワット</item>
        <item>鎌田式かかと落とし</item>
        <item>前モモ伸ばし</item>
        <item>(座)脚裏伸ばし</item>
    </string-array>

    <string name="bt_play_play">再生</string>
    <string name="bt_play_pause">一時停止</string>
    <string name="bt_back">戻る</string>
    <string name="bt_forward">>> </string>
    <string name="sw_loop">リピート再生</string>
    <string name="handsup">手を上げて</string>
    <string name="volume_default">volume 40%</string>
    <string name="activity1">ボール</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="restart">RESTART</string>
    <string name="return_to">戻る</string>
    <string name="keep5s">5秒間キープ"</string>
    <string name="keep3s">3秒間キープ"</string>
    <string name="keep3s2">３秒間キープ"</string>
    <string name="keep2s">2秒キープ　"</string>
    <string name="keep1s"> 1秒キープ"</string>
    <string name="keep10s">10秒間キープ"</string>
    <string name="keep20s">20秒間キープ"</string>
    <string name="keep30s">30秒間キープ"</string>
    <string name="remain5">あと5回</string>
    <string name="remain3">あと3回</string>
    <string name="more_half">あと半分</string>
    <string name="slow_up">ゆっくり上げて</string>
    <string name="slow_down">ゆっくり下げて</string>
    <string name="slow_open">ゆっくり開いて</string>
    <string name="open">開いて</string>
    <string name="slow_close">ゆっくり閉じて</string>
    <string name="up">上げて</string>
    <string name="down">下げて</string>
    <string name="standup">ゆっくり立って</string>
    <string name="sitdown">ゆっくり座って</string>
    <string name="goo">グー</string>
    <string name="choki">チョキ</string>
    <string name="urachoki">裏チョキ</string>
    <string name="pa">パー</string>
    <string name="yuru">ゆるめて</string>
    <string name="tubu">つぶして</string>
    <string name="slow_stre">伸ばして</string>
    <string name="noba">伸ばして</string>
    <string name="modo">戻して</string>
    <string name="stre15keep">伸ばして15秒キープ</string>
    <string name="slow_bent">曲げて</string>
    <string name="taoshite">骨盤を倒して</string>
    <string name="foot_stre">足首を伸ばして</string>
    <string name="foot_bent">足首を曲げて</string>
    <string name="hizakakae">膝を抱えて引き付ける</string>
    <string name="good_job">お疲れさまでした</string>
    <string name="finished">終了</string>
    <string name="relax">リラックス</string>
    <string name="relax10">10秒リラックス</string>
    <string name="change">足を変えて上げて</string>
    <string name="change4">手足を変えて上げて</string>
    <string name="change3">足を変えて</string>
    <string name="change2">足を変えて引き付ける</string>
    <string name="updown">足をそろえて上下</string>
    <string name="goright">左足踏み出して</string>
    <string name="goleft">右足踏み出して</string>
    <string name="goback">元に戻って</string>
    <string name="tovideo">トレーニング方法</string>
    <string name="start_button">start</string>
    <string name="stop_button">stop</string>
    <string name="restart_button">restart</string>
    <string name="back_button">back</string>
    <string name="width">80dp</string>
    <string name="height">35dp</string>
    <string name="btn_save">保存して戻る</string>
    <string name="tv_lb_note">回数:</string>
    <string name="tv_name">未選択</string>
    <string name="chang_times">回数変更</string>
    <string name="menu">メニュー</string>
    <string name="times">回数</string>
    <string name="exesize">動 作</string>
    <string name="kaisuu">運動回数</string>
    <string name="youtube">Youtube</string>
    <string name="textview">TextView</string>
    <string name="changtimes">回数変更</string>
    <string name="play_button">play プレイボタン</string>
    <string name="w_s">W:ワークアウト　S:ストレッチ</string>
    <string name="bgm">BGM\nボタン</string>
    <string name="button">Button</string>
    <string name="textview00">TextView00</string>
    <string name="youtube_text">消音しています。\nYouTubeの画面をクリックして\n音を出してください</string>
    <string name="time">Time</string>
    <string name="hikitsuke">引き付けて</string>
    <string name="remark">説明文の下が切れた時はスクロールできます</string>
    <string name="youtuberemark">Youtubeを開いてこの画面に戻るには、スマフォの戻るボタンで戻ってください。</string>
    <string name="right_leg_up">右足を上げて</string>
    <string name="left_leg_up">左足を上げて</string>
    <string name="drop">すとんと落として</string>
    <string name="back">戻る</string>
    <string name="exrecord">実行記録</string>
    <string name="deleterecord">記録を削除</string>
    <string name="times_by_sets">1セットの回(秒)数</string>
    <string name="ref_hint_times">15</string>
    <string name="main_volume_format">音楽を聞きながらワークアウトする時\nに、ワークアウトのボリュームを調整\nvolume %1$s</string>
    <string name="msg_starting">始めます</string>
    <string name="unit_sets">セット</string>
    <string name="unit_times">回</string>
    <string name="header_progress_format">1/%1$d %2$s</string>
    <string name="tv_times_format">%1$d/%2$d 回</string>
    <string name="tv_sets_format">%1$d/%2$d セット</string>
    <string name="tv_seconds_format">%1$d 秒</string>
    <string name="tv_seconds_feet_format">%1$d 秒  👣</string>
    <string name="brisk_steps_format">スタートからの歩数：%1$d 歩</string>
    <string name="brisk_count_format">早歩き回数：%1$d</string>
    <string name="brisk_tempo_current_format">現在のテンポ：%1$d bpm</string>
    <string name="brisk_timer_format">経過：%1$d 秒</string>
    <string name="brisk_today_achieved_format">%1$s:%2$d回達成\n</string>
    <string name="label_brisk_records">最近一週間の早歩き記録</string>
    <string name="label_interval_walking">インターバル歩行</string>
    <string name="label_starting_on_click">ボタンを押して開始</string>
    <string name="label_tempo_input">テンポ（歩数/分）を入力</string>
    <string name="btn_brisk_walk">早歩き</string>
    <string name="btn_workout_stretch">ワークアウト・ストレッチ</string>
    <string name="btn_all_records">全体の実行記録</string>
    <string name="msg_congrats_format">早歩き%1$d回達成おめでとうございます！\n素晴らしい！</string>
    <string name="btn_to_main">メイン画面へ</string>
    <string name="msg_change_leg">足を変えて上げて</string>
    <string name="msg_change_leg_simple">足を変えて</string>
    <string name="unit_seconds_format">%1$d 秒</string>
    <string name="unit_seconds_keep_format">%1$d 秒キープ</string>
    <string name="unit_sets_format">%1$d/%2$d セット</string>
    <string name="label_activity_name">種目</string>
    <string name="label_no_record">-</string>
    <string name="dialog_confirm_title">確認</string>
    <string name="dialog_confirm_clear_msg">すべての記録を削除してもよろしいですか？</string>
    <string name="dialog_yes">はい</string>
    <string name="dialog_no">キャンセル</string>
    <string name="title_brisk_detail">早歩き詳細記録</string>
    <string name="msg_no_records">記録はありません。</string>
    <string name="label_howto">使い方</string>
    <string name="msg_starting_soon">始めます</string>
    <string name="title_tempo_guide">テンポ（歩数）の目安</string>
    <string name="error_pdf_display">PDFの表示に失敗しました</string>
    <string name="error_launch_brisk">早歩き画面の起動に失敗しました: %1$s</string>
    <string name="error_launch_workout">ワークアウト画面の起動に失敗しました</string>
    <string name="launcher_title">Workout &amp; Brisk</string>
    <string name="progress_action_simple_format">%1$s %2$d回</string>
    <string name="progress_action_30_format">%1$s %2$d/30</string>
    <string name="progress_action_10_format">%1$s %2$d/10</string>
    <string name="progress_action_50_format">%1$s %2$d/50 回</string>
    <string name="brisk_volume_format">Volume %1$s</string>
    <string name="brisk_status_idle">停止中</string>
    <string name="brisk_mode_fast">早歩き</string>
    <string name="brisk_mode_normal">普通歩き</string>
    <string name="brisk_current_mode_format">現在のモード：%1$s</string>
    <string name="brisk_start_with_mode_format">%1$sでスタート</string>
    <string name="toast_start_click">スタートボタンクリック</string>
    <string name="toast_restart_click">リスタートボタンクリック</string>
    <string name="toast_stop_click">ストップボタンクリック</string>
    <string name="brisk_label_current_tempo">現在のテンポ：</string>
    <string name="msg_rest_brief">ちょっと休憩</string>
    <string name="msg_sink_slowly">ゆっくり沈んで</string>
    <string name="msg_endure">耐えて</string>
    <string name="msg_keep_20s">20秒キープ</string>
    <string name="msg_toes_up">つま先を上げて</string>
    <string name="msg_toes_stand">つま先立ちをして</string>
    <string name="msg_stretch_further">さらに伸びをして</string>
    <string name="msg_drop_heels">かかとを落とす</string>
    <string name="msg_pull_heels">足をお尻に引き付け前ももを伸ばす</string>
    <string name="label_shutter_on">シャッターボタンON</string>
    <string name="label_shutter_off">シャッターボタンOFF</string>
    <string name="toast_shutter_on">シャッターボタン操作：ON</string>
    <string name="toast_shutter_off">シャッターボタン操作：OFF</string>
    <string name="msg_not_set">設定されていません</string>
    <string name="brisk_timer_default">経過：0 秒</string>
    <string name="brisk_count_default">早歩き回数：0</string>
    <string name="brisk_steps_default">スタートからの歩数：0 歩</string>
    <string name="brisk_default_tempo">100</string>
    <string name="brisk_btn_walk_mode">歩行モード</string>
    <string name="brisk_shutter_label">シャッターボタン操作</string>
    <string name="brisk_btn_start">　スタート　</string>
    <string name="brisk_btn_stop">ストップ</string>
    <string name="brisk_btn_restart">リスタート</string>
    <string name="brisk_btn_delete">記録の削除</string>
    <string name="scroolOK">下のアクティビティは\nスクロールできます</string>
    <string name="howto">\n◆◆このアプリについて◆◆\\n●早歩きと普通の歩きを3分で繰り返します。\n●一日に早歩きを連続しなくても合計15分行うと筋力・持久力の向上が期待できます。\nピッチ音に合わせて早歩きを1日に5回以上しましょう！！ 週4日以上実行しましょう\n\n◆◆メイン画面◆◆\\n●早歩きの速度に1分当たりの歩数を入力します。デフォルトは122です。　音が交互に変わるので、右左とテンポよく歩きましょう\n●スタートボタンで始めて、ストップボタンで終わります。早歩きと普通歩きは3分ごと交互に変ります。3分未満の場合は記録されません\n●モードボタンに次にスタートボタンで始めるモードが表示されます。モードボタンをタップすると、次にスターするモードが変わります\n●リスタートボタンで、ストップした続きから始められます。信号で止った時などで再開したい場合に使います\n\n◆◆早歩き詳細記録画面◆◆\n●早歩きの詳細な記録が表示されます\n●記録が多い場合はスクロールしてください\n←でメイン画面に戻ります\n\n◆◆テンポ（歩数）の目安画面◆◆\n身長と強度別の早歩きのテンポを表示\n●体の感覚で早歩きのテンポを決める方法\n●安静時脈拍と年齢によるテンポを決める方法（カルボーネン法）\n←でメイン画面に戻ります\n\n◆◆使い方画面◆◆\n●この画面\n←でメイン画面に戻ります\n\n◆◆Bluetoothシャッターボタン◆◆\n●Bluetoothのシャッターボタンでストップ、リスタートが出来ます\nシャッターボタンをクリックでストップまたはリスタート\nダブルクリックでスタートです\n㊟スマフォの音声ボリュームを使っているので、ボリュームを変えると、ボタンを押したことになります。\n㊟シャッターボタンの機種により操作出来ないことがあります\n</string>
    <string name="momizizm_music_bgm">MOMIZizm MUSiC（もみじば）｜フリーBGM</string>
    <string name="sestumei">ここに使い方の説明を表示します。\n\n内容が長くなってもスクロールして読めます。</string>
    <string name="ttsukaikata">使い方</string>
    <string name="_125">125</string>
    <string name="plus">＋</string>
    <string name="minus">－</string>
    <string name="menu_jtrc">JTRC熟年体育大学リサーチセンター</string>
</resources>
