<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <TextView
        android:id="@+id/launcherTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/launcher_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#333333"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@+id/launcherTitle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoBrisk"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#BAF4366C"
            android:text="@string/btn_brisk_walk"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoWorkout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#03A9F4"
            android:text="@string/btn_workout_stretch"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoLog"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#8BC34A"
            android:text="@string/btn_all_records"
            android:textSize="16sp"
            app:cornerRadius="12dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:text="@string/app_name"
        android:textColor="#999999"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>